feat: rota para se registrar na aplicação implementado criação da empressa e do usuario adimin
